fix : 문제 전체 조회 상태, 맞춘사람, 정답률 수정